--- a/src/main/webapp/resources/statics/css/registration.css
+++ b/src/main/webapp/resources/statics/css/registration.css
@@ -1,7 +1,35 @@
-body {
+.employee_registration {
 	background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-		url("../img/festival.jpg") no-repeat center center fixed;;
+		url("../images/festival.jpg") no-repeat center center fixed;;
 	background-size: cover;
+	height: 100%;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0px;
+}
+
+.shift_registration {
+	background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+		url("../images/festival2.jpg") no-repeat center center fixed;;
+	background-size: cover;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0px;
+}
+
+.shiftAllocation_registration {
+	background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+		url("../images/bar.jpg") no-repeat center center fixed;;
+	background-size: cover;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0px;
 }
 
 .registration_header {
@@ -68,7 +96,7 @@ body {
 	margin-left: 155px;
 }
 
-.registration_errormessage {
+.registration_errormessage exists {
 	color: #D8000C;
 	background-color: #FFBABA;
 	width: 300px;
