2 tests sem virka ekki

--- a/src/main/webapp/WEB-INF/view/templates/allEmployees.html
+++ b/src/main/webapp/WEB-INF/view/templates/allEmployees.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml"
+	  xmlns:th="http://www.thymeleaf.org">
 <head>
 
 <object th:include="fragments/bootstrapHead :: bootstrapHead"
 	th:remove="tag" />
 <link rel="stylesheet" href="/resources/statics/css/list.css" />
+
 </head>
 <body>
 	<div class="employee_list">
@@ -33,6 +35,7 @@
 			</tbody>
 		</table>
 	</div>
+
 
 </body>
 </html>
