--- a/src/main/webapp/WEB-INF/view/templates/allEmployees.html
+++ b/src/main/webapp/WEB-INF/view/templates/allEmployees.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml"
-	  xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
 
 <object th:include="fragments/bootstrapHead :: bootstrapHead"
