--- a/src/main/webapp/WEB-INF/view/templates/allEmployees.html
+++ b/src/main/webapp/WEB-INF/view/templates/allEmployees.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="employee_list">
-		<div th:replace="fragments/navBar :: header"></div>
+		<div th:replace="fragments/navBar :: header(allEmployees)"></div>
 		<h1>Starfsmannalisti</h1>
 
 
