--- a/src/main/webapp/WEB-INF/view/templates/employeeConfirmation.html
+++ b/src/main/webapp/WEB-INF/view/templates/employeeConfirmation.html
@@ -5,6 +5,7 @@
 <object th:include="fragments/bootstrapHead :: bootstrapHead" th:remove="tag" />
 
 <link rel="stylesheet" href="/resources/styles/confirmation.css" />
+<div th:replace="fragments/navBar :: header(employeeRegistration)"></div>
 
 </head>
 <body>
