--- a/src/main/webapp/WEB-INF/view/templates/shiftAllocation.html
+++ b/src/main/webapp/WEB-INF/view/templates/shiftAllocation.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="shiftAllocation_registration">
-		<div th:replace="fragments/navBar :: header"></div>
+	<div th:replace="fragments/navBar :: header(shiftAllocation)"></div>
 		<div class="registration_wrapper">
 			<h1 class="registration_header">Úthlutun starfsmanns á vakt</h1>
 			<div
