--- a/src/main/webapp/WEB-INF/view/templates/shiftRegistration.html
+++ b/src/main/webapp/WEB-INF/view/templates/shiftRegistration.html
@@ -8,7 +8,7 @@
 </head>
 <body >
 <div class="shift_registration">
-	<div th:replace="fragments/navBar :: header"></div>
+	<div th:replace="fragments/navBar :: header(shiftRegistration)"></div>
 	<div class="registration_wrapper">
 	<h1 class="registration_header">Starfsmannaskráning</h1>
 		<div
