--- a/src/main/webapp/WEB-INF/view/templates/employeeRegistration.html
+++ b/src/main/webapp/WEB-INF/view/templates/employeeRegistration.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="employee_registration">
-	<div th:replace="fragments/navBar :: header"></div>
+	<div th:replace="fragments/navBar :: header(employeeRegistration)"></div>
 	<div class="registration_wrapper">
 	<h1 class="registration_header">Starfsmannaskráning</h1>
 		<div
