--- a/src/main/webapp/WEB-INF/view/templates/shiftAllocationConfirmation.html
+++ b/src/main/webapp/WEB-INF/view/templates/shiftAllocationConfirmation.html
@@ -5,22 +5,23 @@
 <object th:include="fragments/bootstrapHead :: bootstrapHead" th:remove="tag" />
 
 <link rel="stylesheet" href="/resources/styles/confirmation.css" />
+<div th:replace="fragments/navBar :: header(shiftAllocation)"></div>
 
 </head>
 <body>
 	<h1>Skráning starfsmanns á vakt tókst!</h1>
 	<h2>Upplýsingar um starfsmann:</h2>
-<!-- 	<p>
-	Nafn: <span th:text="${employee.name}"/><br>
-	Fæðingardagur: <span th:text="${employee.date}"/><br>
-	Email: <span th:text="${employee.email}"/><br>
-	Starfstitill:<span th:text="${employee.type}"/><br></p>
+	<h3>Nafn: <span th:text="${employee.name}"/></h3>
+	<h3>Fæðingardagur:<span th:text="${employee.date}"/></h3>
+	<h3>Email: <span th:text="${employee.email}"/></h3>
+	<h3>Starfstitill: <span th:text="${employee.type}"/></h3>
 	<h2>Upplýsingar um vakt:</h2>
-	<p>Titill: <span th:text="${shift.title}"/><br>
-	Dagsetning: <span th:text="${shift.date}"/><br>
-	Upphafstími: <span th:text="${shift.beginTime}"/><br>
-	Lokatími: <span th:text="${shift.endTime}"/><br>
-	Tegund vaktar: <span th:text="${shift.type}"/></p> -->
+	<h3>Titill: <span th:text="${shift.title}"/></h3>
+	<h3>Dagsetning: <span th:text="${shift.date}"/></h3>
+	<h3>Upphafstími: <span th:text="${shift.beginTime}"/></h3>
+	<h3>Lokatími:<span th:text="${shift.endTime}"/></h3>
+	<h3>Fjöldi starfsmanna: <span th:text="${shift.howMany}"/></h3>
+	<h3>Tegund vaktar: <span th:text="${shift.type}"/></h3>
 
 </body>
 </html>
