--- a/src/main/webapp/WEB-INF/view/templates/fragments/navBar.html
+++ b/src/main/webapp/WEB-INF/view/templates/fragments/navBar.html
@@ -1,38 +1,38 @@
 <div th:fragment="header(activeTab)">
-	<nav class="navigationBar">
-		<div class="navigationBar_container">
-			<div class="navigationBar_header">
-				<div class="navigationBar_collapse">
-					<ul class="navigationBar_ul">
-						<li
-							th:class="${activeTab== 'employeeRegistration'}? 'navigationBar_link active' : 'navigationBar_link inactive'"><a
-							href="/"> <span class="fa fa-user"></span>Starfsmannaskráning
-						</a></li>
-						<li
-							th:class="${activeTab== 'shiftRegistration'}? 'navigationBar_link active' : 'navigationBar_link inactive'">
-							<a href="./shiftRegistration"> <span class="fa fa-briefcase"></span>Skráning
-								vaktar
-						</a>
-						</li>
-						<li
-							th:class="${activeTab== 'shiftAllocation'}? 'navigationBar_link active' : 'navigationBar_link inactive'"><a
-							href="./shiftAllocation"> <span class="fa fa-pencil"></span>Starfsmannaúthlutun
-						</a></li>
-						<li
-							th:class="${activeTab== 'allEmployees'}? 'navigationBar_link active' : 'navigationBar_link inactive'"><a
-							href="/employeeList"> <span class="fa fa-users"></span>Starfsmannalisti
-						</a></li>
-						<li
-							th:class="${activeTab== 'allShifts'}? 'navigationBar_link active' :'navigationBar_link  inactive'"><a
-							href="/shiftList"> <span class="fa fa-briefcase"></span>Vaktalisti
-						</a></li>
-						<li class="navigationBar_navIcon"><a href="/"> <span
-								class="fa fa-navicon"></span>
-						</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</nav>
-</div> 
+
+    <nav id="navigationBar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" 
+                        data-target="#valmyndinMin"> 
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            
+            <div class="navbar-collapse collapse" id="valmyndinMin">
+                <ul id="navigationBar_ul" class="nav navbar-nav ">
+                    <li th:class="${activeTab== 'employeeRegistration'}? 'active' : 'inactive'" >
+                        <a href="#" th:href="@{/}"> <span class="fa fa-user"></span> Starfsmannaskráning</a>
+                    </li >
+                    <li th:class="${activeTab== 'shiftRegistration'}? 'active' : 'inactive'" >
+                        <a href="#" th:href="@{/shiftRegistration}"> <span class="fa fa-briefcase"></span>Ný vakt</a>
+                    </li>
+                    <li th:class="${activeTab== 'shiftAllocation'}? 'active' : 'inactive'">
+                        <a href="#" th:href="@{/shiftAllocation}"> <span class="fa fa-pencil"></span> Vaktarúthlutun</a>
+                    </li>
+                    
+                    <li th:class="${activeTab== 'allShifts'}? 'active' : 'inactive'">
+                        <a href="#" th:href="@{/shiftList}"> <span class="fa fa-users"></span> Starfsmannalisti</a>
+                    </li>
+                    
+                    <li th:class="${activeTab== 'allEmployees'}? 'active' : 'inactive'">
+                        <a href="#" th:href="@{/employeeList}"> <span class="fa fa-briefcase"></span>Vaktarlisti</a>
+                    </li>
+                </ul>    
+            </div>
+        </div>
+    </nav>
+</div>
 
