--- a/src/main/webapp/WEB-INF/view/templates/fragments/bootstrapHead.html
+++ b/src/main/webapp/WEB-INF/view/templates/fragments/bootstrapHead.html
@@ -8,7 +8,8 @@
 
 <link rel="stylesheet" type="text/css"
 	href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" />
-
+	
+<link rel="stylesheet" href="/resources/statics/css/custom.css" />
 <link rel="stylesheet" href="/resources/statics/css/navBar.css" />
 
 </head>
