--- a/src/main/webapp/WEB-INF/view/templates/allShifts.html
+++ b/src/main/webapp/WEB-INF/view/templates/allShifts.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="/resources/statics/css/list.css" />
 </head>
 <body>
-	<div class="employee_list">
+	<div class="shift_list">
 		<div th:replace="fragments/navBar :: header(allShifts)"></div>
 		<h1 class="list_title" >Vaktalisti</h1>
 		
