--- a/src/main/webapp/WEB-INF/view/templates/shiftRegistration.html
+++ b/src/main/webapp/WEB-INF/view/templates/shiftRegistration.html
@@ -24,7 +24,7 @@
 						th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Title
 						Error</div>
 					<label class="registration_icon" for="title"> <i
-						class="fa fa-user"></i></label> <input class="registration_input"
+						class="	fa fa-id-badge"></i></label> <input class="registration_input"
 						th:classappend="${#fields.hasErrors('title')} ? registration_errorInput : ''"
 						type="text" placeholder="Titill vaktar" th:field="*{title}" />
 				</div>
