--- a/src/main/webapp/WEB-INF/view/templates/shiftAllocation.html
+++ b/src/main/webapp/WEB-INF/view/templates/shiftAllocation.html
@@ -23,7 +23,7 @@
 				<div class="registration_fieldErrormessage" th:if="${#fields.hasErrors('empId')}" th:errors="*{empId}">Employee
 						Id Error</div>
 					<label class="registration_icon" for="employeeId"> <i
-						class="fa fa-user"></i></label> <input class="registration_input"
+						class="fa fa-id-card-o"></i></label> <input class="registration_input"
 						th:classappend="${#fields.hasErrors('empId')} ? registration_errorInput : ''"
 						type="text" placeholder="Starfsmannaauðkenni" th:field="*{empId}" />
 				</div>
