--- a/src/main/webapp/resources/statics/css/list.css
+++ b/src/main/webapp/resources/statics/css/list.css
@@ -7,8 +7,30 @@ body {
 	font-weight: 300;
 	text-align: center;
 	padding: 10px 0;
+	margin: 10px;
+	color: #0098AE;
+}
+.list_subTitle {
+	font-size: 28px;
+	font-weight: 300;
+	text-align: center;
+	padding: 10px 0;
+	margin-top: 0;
 	margin-bottom: 10px;
 	color: #0098AE;
+}
+.list_subTitle>a{
+	text-decoration: none;
+	color: #FF6700;
+}
+.list_shiftInfo{
+	font-size: 24px;
+	font-weight: 300;
+	background-color: #FF6700;
+	width: 80%;
+	border-radius: 6px 6px 0 0;
+	margin: auto;
+	padding: 5px 8px;
 }
 
 .list_search_wrapper {
@@ -53,7 +75,7 @@ body {
 }
 
 .list_thead {
-	color: #00708C;s
+	color: #00708C;
 }
 
 .list_th {
