Tveir linkar a navbar hetu thad sama

--- a/src/main/webapp/WEB-INF/view/templates/fragments/navBar.html
+++ b/src/main/webapp/WEB-INF/view/templates/fragments/navBar.html
@@ -46,7 +46,7 @@
 					<li
 						th:class="${activeTab== 'allShiftAllocations'}? 'active' : 'inactive'">
 						<a href="#" th:href="@{/shiftAllocationView}"> <span
-							class="fa fa-list-alt"></span>Vaktarúthlutun
+							class="fa fa-list-alt"></span>Vaktarúthlutunarlisti
 					</a>
 					</li>
 				</ul>
