--- a/src/main/webapp/WEB-INF/view/templates/allShiftAllocations.html
+++ b/src/main/webapp/WEB-INF/view/templates/allShiftAllocations.html
@@ -18,11 +18,11 @@
 		<table class="table" >
 			<thead class="list_thead">
 				<tr>
-					<th class="list_th"><i class="fa fa-user"></i> Name</th>
-					<th class="list_th"><i class="fa fa-envelope"></i>Email</th>
-					<th class="list_th"><i class="fa fa-briefcase"></i>Type</th>
-					<th class="list_th"><i class="fa fa-pencil"></i>Size</th>
-					<th class="list_th"><i class="fa fa-calendar"></i>Date</th>
+					<th class="list_th"><i class="fa fa-user"></i> Nafn</th>
+					<th class="list_th"><i class="fa fa-envelope"></i>Netfang</th>
+					<th class="list_th"><i class="fa fa-briefcase"></i>Tegund vaktar</th>
+					<th class="list_th"><i class="fa fa-pencil"></i>Bolastærð</th>
+					<th class="list_th"><i class="fa fa-calendar"></i>Dagsetning</th>
 				</tr>
 			</thead>
 			<tbody>
