--- a/src/main/webapp/WEB-INF/view/templates/allShifts.html
+++ b/src/main/webapp/WEB-INF/view/templates/allShifts.html
@@ -26,17 +26,17 @@
 			<thead class="list_thead">
 				<tr>
 					<th class="list_th" ><i
-					class="fa fa-briefcase"></i>Title</th>
+					class="	fa fa-id-badge"></i>Titill vaktar</th>
 					<th class="list_th" ><i
-					class="fa fa-briefcase"></i>Type</th>
+					class="fa fa-briefcase"></i>Tegund vaktar</th>
 					<th class="list_th" ><i
-					class="fa fa-calendar"></i>Date</th>
+					class="fa fa-calendar"></i>Dagsetning</th>
 					<th class="list_th" ><i
-					class="fa fa-clock-o"></i> Begin Time</th>
+					class="fa fa-clock-o"></i>Upphafstími</th>
 					<th class="list_th" ><i
-					class="fa fa-clock-o"></i> End Time</th>
+					class="fa fa-clock-o"></i>Enda tími</th>
 					<th class="list_th" ><i
-					class="fa fa-users"></i>How Many</th>
+					class="fa fa-users"></i>Fjöldi starfsmanna</th>
 				</tr>
 			</thead>
 			<tbody>
